# fairy

./: .agent-abandon.json  .bakery.yml  .gitignore  CLAUDE.md  Makefile  README.md  SECURITY.md  conftest.py  docker-compose.yml  manage.py  posthog-setup-report.md  pyproject.toml  render.yaml
.bakery/: setup.sh
.claude/skills/: agent-on-demand-api.md  fairy-api.md  sprites.md
.claude/skills/aod-sdk-python/: SKILL.md
.claude/skills/aod-sdk-typescript/: SKILL.md
.claude/skills/integration-django/: SKILL.md
.claude/skills/sprites/: SKILL.md
.github/workflows/: auto-revert.yml  ci.yml  docs.yml  judge.yml  sdk-release-npm.yml  sdk-release-test.yml  sdk-release.yml
clients/python/: LICENSE  README.md  pyproject.toml
clients/python/src/aod/: __init__.py  _http.py  client.py  errors.py  models.py  stream.py
clients/python/src/aod/pretty/: __init__.py  claude.py
clients/python/src/aod/resources/: __init__.py  agents.py  environments.py  sessions.py
clients/python/tests/: conftest.py  test_agents.py  test_client.py  test_environments.py  test_pretty_claude.py  test_pretty_factory.py  test_realistic_payloads.py  test_sessions.py  test_stream.py
clients/typescript/: README.md  package-lock.json  package.json  tsconfig.json
clients/typescript/src/: client.ts  errors.ts  http.ts  index.ts  stream.ts  types.ts
clients/typescript/tests/: agents.test.ts  client.test.ts  environments.test.ts  helpers.ts  sessions.test.ts  stream.test.ts
demos/board-that-ships/: README.md  app.py  requirements.txt
demos/board-that-ships/static/: index.html
demos/brief/: README.md  app.py  research_data.py
demos/brief/static/: index.html
demos/changelog-writer/: README.md  app.py  release_data.py
demos/data-detective/: README.md  app.py  datasets.py
demos/forge/: README.md  app.py  scenarios.py
demos/orbit/: README.md  app.py  scenarios.py
demos/pr-reviewer/: README.md  app.py  review_data.py
demos/relay/: README.md  app.py  requirements.txt  scenarios.py
demos/scout/: README.md  app.py  requirements.txt  scenarios.py
docs/: API.md  openapi.yaml  request_schemas.json  runbook.md  tools-and-mcp-examples.md
examples/batch-automation/: README.md  batch.py  prompts.sample.txt
examples/chat-bot/: README.md  bot.py
examples/cli/: README.md  aod_client.py  claude_format.py  example-cli  example-cli.py
examples/dashboard/: README.md  app.py
fairy/: api.py  config.py  main.py  runtimes.py  stream.py
narrative/: idea-document.md  killer-apps.md  press-release.md  slideshow.md  story-page.md
scripts/: auto_revert.py  check_mutmut.py  check_request_schemas.py  check_sdk_parity.py  mutmut_report.py  scope_e2e.py  validate_openapi.py
site/: mkdocs.yml
site/docs/: index.md
site/docs/api/: concepts.md  (+9 more)
site/overrides/: main.html
src/agent_on_demand/: admin.py  analytics.py  api.py  apps.py  auth.py  crypto.py  environment_validation.py  github_resource_validation.py  mcp_server_validation.py  models.py  models_catalog.py  observability.py  run_agent.sh.tmpl  runtime_model_compat.py  session_service.py  session_state.py  signals.py  sprites_exec.py  sprites_patch.py  stream.py  stream_format.py  tasks.py  urls.py  versioning.py  views.py
src/config/: asgi.py  settings.py  urls.py
src/fairy/: admin.py  apps.py  auth.py  crypto.py  models.py  runtimes.py  signals.py  sprites_exec.py  stream.py  test_mcp.py  urls.py  views.py
tests/: conftest.py  test_agents.py  test_api.py  test_auth.py  test_auto_revert.py  test_backend_handle.py  test_backend_protocol.py  test_backend_registry.py  test_build_spec_for_session.py  test_claude_command.py  test_claude_config.py  test_claude_otel.py  test_codex_command.py  test_codex_config.py  test_crypto.py  test_danger_zone_existence.py  test_env_file.py  test_environment_validation.py  test_environments.py  test_fake_backend.py  test_fk_cascade.py  test_gemini_command.py  test_gemini_config.py  test_git_credentials.py  test_github_resource_validation.py  test_health.py  test_maintenance.py  test_mcp_endpoint.py  test_mcp_server_validation.py  test_metadata_merge.py  test_model_repr.py  test_models_catalog.py  test_network_policy.py  test_networking_wiring.py  test_observability.py  test_observability_filter.py  test_observability_streamhandler.py  test_openapi_url_parity.py  test_opencode_command.py  test_opencode_config.py  (+35 more)
tests/e2e/: conftest.py  test_agent_tools.py  test_agents.py  test_environments.py  test_mcp.py  test_mcp_enforcement.py  test_sessions.py  test_skills.py
tests/fakes/: backend.py  sprite.py
tests/runtimes/: test_claude.py  test_codex.py  test_gemini.py  test_goose.py  test_opencode.py
thoughts/plans/: 2026-04-15-fairy-api.md  2026-04-16-agent-tool-enforcement.md  2026-04-16-environment-model.md  2026-04-16-session-based-execution.md  2026-04-17-agent-mcp-enforcement.md  2026-04-17-network-isolation.md  2026-04-17-skills-phase-1.md  2026-04-17-tools-mcp-examples-docs.md  2026-04-19-procrastinate-worker.md  2026-04-19-session-service-api-refactor.md  2026-04-19-streaming-high-volume-readiness.md  2026-04-19-threading-architecture-decision.md  2026-04-19-threading-bug-fixes.md  2026-04-20-asgi-everywhere.md  2026-04-21-provision-stage-events.md  2026-04-26-session-service-quality-pass.md  2026-04-27-session-backend-extraction.md  aod-sdk-improvement-backlog.md
thoughts/research/: 2026-04-15-sprites-platform-research.md  2026-04-16-agent-tool-enforcement-e2e.md  2026-04-16-agent-tools-and-mcp.md  2026-04-16-e2e-test-suite.md  2026-04-16-environment-model.md  2026-04-16-github-repo-context.md  2026-04-16-session-based-execution.md  2026-04-16-sprites-deep-dive.md  2026-04-17-agent-skills-support.md  2026-04-17-fairy-api-docs.md  2026-04-17-mcp-enforcement-e2e.md  2026-04-17-network-isolation.md  2026-04-18-session-backend-abstraction.md  2026-04-18-sprites-script-setup.md  2026-04-19-streaming-high-volume-readiness.md  2026-04-19-threading-in-web-server.md  2026-04-20-sse-split-asgi.md  2026-04-21-goose-runtime-support.md  2026-04-21-meta-runtime-pattern.md  2026-04-21-opencode-runtime-support.md
(+159 files in other folders)
