[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/config", "src/agent_on_demand"]

[project]
name = "agent-on-demand"
version = "0.1.0"
description = "API for running AI coding agents on Sprites"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
dependencies = [
    "django>=5.1",
    "django-cors-headers>=4.0",
    "sprites-py>=0.0.1rc37",
    "pydantic>=2.0.0",
    "cryptography>=43.0",
    "dj-database-url>=2.1",
    "psycopg[binary]>=3.1",
    "uvicorn[standard]>=0.30",
    "whitenoise>=6.7",
    "procrastinate[django]>=3.0",
    "posthog>=3.7",
    "opentelemetry-api>=1.29",
    "opentelemetry-sdk>=1.29",
    "opentelemetry-exporter-otlp-proto-http>=1.29",
    "opentelemetry-instrumentation-asgi>=0.50b0",
    "opentelemetry-instrumentation-django>=0.50b0",
    "opentelemetry-instrumentation-psycopg>=0.50b0",
    "opentelemetry-instrumentation-requests>=0.50b0",
    "opentelemetry-instrumentation-logging>=0.50b0",
]

[project.optional-dependencies]
docs = [
    "mkdocs-material>=9.5",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23",
    "pytest-django>=4.8.0",
    "pytest-mock>=3.14.0",
    "pytest-xdist>=3.6.0",
    "pytest-cov>=5.0.0",
    "requests>=2.31.0",
    "ruff>=0.8.0",
    "mypy>=1.11",
    "types-requests>=2.31",
    "pip-audit>=2.7",
    "bandit>=1.7",
    "pylint>=3.2",
    "pyyaml>=6.0",
    "mutmut>=3.0",
    "django-migration-linter>=5.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
pythonpath = ["src"]
norecursedirs = ["tests/e2e", ".venv", "clients"]
asyncio_mode = "auto"
markers = [
    "slow: tests that create real agent sessions (may take minutes)",
    "mcp_matrix: verifies MCP server config reaches each runtime",
]

[tool.coverage.run]
source = ["src/agent_on_demand"]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "src/agent_on_demand/admin.py",
    "src/agent_on_demand/apps.py",
    "src/agent_on_demand/signals.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
# Ratcheted floor — raise this in PRs that add tests, never lower it without
# explicit human approval. `make coverage` enforces. See docs/runbook.md.
fail_under = 96
precision = 2
show_missing = true
skip_covered = true

[tool.mypy]
python_version = "3.11"
files = ["src"]
exclude = [
    "src/agent_on_demand/migrations/",
    "src/agent_on_demand\\.egg-info/",
]
ignore_missing_imports = true
check_untyped_defs = false
disable_error_code = ["annotation-unchecked", "import-untyped"]
follow_imports = "silent"

[tool.bandit]
exclude_dirs = ["tests", ".venv", "src/agent_on_demand/migrations"]

[tool.mutmut]
# Mutation testing for the highest-blast-radius modules: auth, crypto,
# optimistic-concurrency check, and the session state machine.
# Run with `make mutation-test`.
#
# IMPORTANT: tests under tests_dir must be sync-only. mutmut runs tests via
# `hammett` (a pytest-compatible runner that does NOT load pytest-asyncio or
# pytest-django plugins). Use `asgiref.sync.async_to_sync(view)` to test async
# code paths from sync test bodies.
#
# Known-equivalent mutants (cannot be killed; behaviorally identical to original).
# See scripts/check_mutmut.py for the authoritative allowlist.
paths_to_mutate = [
    "src/agent_on_demand/crypto.py",
    "src/agent_on_demand/auth.py",
    "src/agent_on_demand/versioning.py",
    "src/agent_on_demand/session_state.py",
]
tests_dir = [
    "tests/test_auth.py",
    "tests/test_crypto.py",
    "tests/test_versioning.py",
    "tests/test_session_state.py",
]
# mutmut copies its working tree to ./mutants/ and runs pytest from there;
# without these, the rest of the src/ tree isn't available to the test runner.
also_copy = [
    "src/",
    "manage.py",
]
