[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aod"]

[project]
name = "aod-sdk"
version = "0.1.0"
description = "Python SDK for the Agent on Demand API"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
readme = "README.md"
authors = [{ name = "Ravi" }]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.11",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/ravi-hq/agent-on-demand"
Source = "https://github.com/ravi-hq/agent-on-demand/tree/main/clients/python"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
files = ["src"]
check_untyped_defs = true
